AX: If an element that is a continuation is removed, its parent tree is not notified appropriately that their children have changed https://bugs.webkit.org/show_bug.cgi?id=41000

Reviewed by Darin Adler.

WebCore:

Test: accessibility/removed-continuation-element-causes-crash.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::updateChildrenIfNecessary):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::childrenChanged):
(WebCore::AccessibilityRenderObject::addChildren):
* accessibility/AccessibilityRenderObject.h:

LayoutTests:

* accessibility/removed-continuation-element-causes-crash-expected.txt: Added.
* accessibility/removed-continuation-element-causes-crash.html: Added.



Canonical link: https://commits.webkit.org/52630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61622 268f45cc-cd09-0410-ab3c-d52691b4dbfc