WebCore/accessibility/AccessibilityRenderObject.h
@@ -204,7 +204,7 @@ public:
 
     virtual const AccessibilityChildrenVector& children();
     virtual void clearChildren();
-    void updateChildrenIfNecessary();
+    virtual void updateChildrenIfNecessary();
     
     virtual void setFocused(bool);
     virtual void setSelectedTextRange(const PlainTextRange&);
